--- a/backend/.env
+++ b/backend/.env
@@ -3,6 +3,8 @@ DB_PORT=5432
 DB_NAME=editorial_app
 DB_USER=markitos
 DB_PASSWORD=AjedreZ22
-   
- 
+DATABASE_URL=postgresql://markitos:AjedreZ22@localhost:5432/editorial_app
+NODE_ENV=development
+PORT=4000
+
 # This file contains environment variables for the backend database connection.
