--- a/backend/package.json
+++ b/backend/package.json
@@ -7,9 +7,13 @@
   "keywords": ["express", "postgresql", "api", "editorial"],
   "license": "ISC",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js",
-    "test": "echo \"No tests specified\" && exit 0"
+    "start": "node app.js",
+    "dev": "nodemon app.js",
+    "test": "node test-api.js",
+    "test:endpoints": "echo 'Usa test-endpoints.http con REST Client extension o ejecuta: npm run test'",
+    "verify:db": "node verify-database.js",
+    "test:connection": "node test-connection.js",
+    "setup:db": "echo 'Ejecuta setup-database.sql en tu cliente PostgreSQL'"
   },
   "dependencies": {
     "cors": "^2.8.5",
