--- a/backend/package.json
+++ b/backend/package.json
@@ -10,7 +10,9 @@
     "start": "node app.js",
     "dev": "nodemon app.js",
     "test": "node test-api.js",
-    "test:endpoints": "echo 'Usa test-endpoints.http con REST Client extension o ejecuta: npm run test'",
+    "test:usuarios": "node test-api.js",
+    "test:articulos": "node test-articulos.js",
+    "test:endpoints": "echo 'Usa test-endpoints.http con REST Client extension'",
     "verify:db": "node verify-database.js",
     "test:connection": "node test-connection.js",
     "setup:db": "echo 'Ejecuta setup-database.sql en tu cliente PostgreSQL'"
