api de notificaciones funcionando

--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
     "test:usuarios": "node test-api.js",
     "test:articulos": "node test-articulos.js",
     "test:revisiones": "node test-revisiones.js",
+    "test:notificaciones": "node test-notificaciones.js",
     "test:endpoints": "echo 'Usa test-endpoints.http con REST Client extension'",
     "verify:db": "node verify-database.js",
     "test:connection": "node test-connection.js",
