--- a/backend/package.json
+++ b/backend/package.json
@@ -27,12 +27,14 @@
     "setup:db": "echo 'Ejecuta setup-database.sql en tu cliente PostgreSQL'"
   },
   "dependencies": {
+    "axios": "^1.11.0",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
-    "pg": "^8.16.3"
+    "pg": "^8.16.3",
+    "react-router-dom": "^7.7.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
