--- a/backend/package.json
+++ b/backend/package.json
@@ -33,6 +33,7 @@
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^2.0.2",
     "pg": "^8.16.3",
     "react-router-dom": "^7.7.0"
   },
