paso previo a produccion

--- a/.env.production
+++ b/.env.production
@@ -6,7 +6,7 @@ VITE_API_URL=https://api.editorial-app.com
 VITE_API_TIMEOUT=10000
 
 # Database Configuration (for backend)
-DATABASE_URL=postgresql://username:password@localhost:5432/editorial_prod
+DATABASE_URL=postgresql://username:password@localhost:5432/editorialdata
 DATABASE_SSL=true
 DATABASE_POOL_MIN=2
 DATABASE_POOL_MAX=10
