--- a/.env.staging
+++ b/.env.staging
@@ -6,7 +6,7 @@ VITE_API_URL=https://staging-api.editorial-app.com
 VITE_API_TIMEOUT=10000
 
 # Database Configuration
-DATABASE_URL=postgresql://username:password@localhost:5432/editorial_staging
+DATABASE_URL=postgresql://username:password@localhost:5432/editorialdata_staging
 DATABASE_SSL=true
 DATABASE_POOL_MIN=1
 DATABASE_POOL_MAX=5
