--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -20,7 +20,7 @@ jobs:
         image: postgres:14
         env:
           POSTGRES_PASSWORD: postgres
-          POSTGRES_DB: editorial_test
+          POSTGRES_DB: editorialdata
         options: >-
           --health-cmd pg_isready
           --health-interval 10s
@@ -53,7 +53,7 @@ jobs:
     - name: 🔗 Run integration tests
       run: npm run test:integration
       env:
-        DATABASE_URL: postgresql://postgres:postgres@localhost:5432/editorial_test
+        DATABASE_URL: postgresql://postgres:postgres@localhost:5432/editorialdata
 
     - name: 🎭 Run E2E tests
       uses: cypress-io/github-action@v6
