--- a/.env.production
+++ b/.env.production
@@ -2,7 +2,7 @@
 NODE_ENV=production
 
 # API Configuration
-VITE_API_URL=https://api.editorial-app.com
+VITE_API_URL=http://localhost:4000/api
 VITE_API_TIMEOUT=10000
 
 # Database Configuration (for backend)
