actualizacion en debian

--- a/backend/.env
+++ b/backend/.env
@@ -1,8 +1,18 @@
-DB_HOST=192.168.18.5
+# Base de datos PostgreSQL (usando la existente)
+DB_HOST=localhost
 DB_PORT=5432
 DB_NAME=editorialdata
 DB_USER=markitos
 DB_PASSWORD=AjedreZ22
-DATABASE_URL=postgresql://markitos:AjedreZ22@192.168.18.5:5432/editorialdata
-NODE_ENV=development
+
+# JWT Secret - CAMBIAR por algo muy seguro
+JWT_SECRET=$%^Tdasd9529841#$&*9dascaseASDeqQQasdcEasdc$##@33
+
+# Puerto del servidor
 PORT=4000
+
+# Entorno
+NODE_ENV=production
+
+# CORS (permitir frontend)
+FRONTEND_URL=http://localhost:3000
