--- a/.env.production
+++ b/.env.production
@@ -1,41 +1,3 @@
 # Production Environment Configuration
-NODE_ENV=production
-
-# API Configuration
-VITE_API_URL=https://api.editorial-app.com
-VITE_API_TIMEOUT=10000
-
-# Database Configuration (for backend)
-DATABASE_URL=postgresql://username:password@localhost:5432/editorialdata
-DATABASE_SSL=true
-DATABASE_POOL_MIN=2
-DATABASE_POOL_MAX=10
-
-# Authentication
-JWT_SECRET=your-super-secure-jwt-secret-here
-JWT_EXPIRES_IN=24h
-BCRYPT_ROUNDS=12
-
-# File Upload Configuration
-UPLOAD_MAX_SIZE=10485760
-UPLOAD_ALLOWED_TYPES=pdf,doc,docx,txt
-
-# Email Configuration (for notifications)
-EMAIL_SERVICE=gmail
-EMAIL_USER=noreply@editorial-app.com
-EMAIL_PASS=your-email-password
-EMAIL_FROM=Editorial App <noreply@editorial-app.com>
-
-# Security
-CORS_ORIGIN=https://editorial-app.com
-SECURE_COOKIES=true
-CSRF_SECRET=your-csrf-secret-here
-
-# Logging
-LOG_LEVEL=info
-LOG_FILE=logs/production.log
-
-# Performance
-CACHE_TTL=3600
-RATE_LIMIT_WINDOW=900000
-RATE_LIMIT_REQUESTS=100
+VITE_API_URL=http://localhost:4000/api
+VITE_APP_ENV=production
