--- a/backend/.env
+++ b/backend/.env
@@ -3,10 +3,11 @@ DB_HOST=localhost
 DB_PORT=5432
 DB_NAME=editorialdata
 DB_USER=markitos
-DB_PASSWORD=AjedreZ22
+DB_PASSWORD=123456
 
 # JWT Secret - CAMBIAR por algo muy seguro
 JWT_SECRET=$%^Tdasd9529841#$&*9dascaseASDeqQQasdcEasdc$##@33
+JWT_EXPIRES_IN=24h
 
 # Puerto del servidor
 PORT=4000
@@ -14,5 +15,4 @@ PORT=4000
 # Entorno
 NODE_ENV=production
 
-# CORS (permitir frontend)
-FRONTEND_URL=http://localhost:3000
+
