preparacion para despliegue en Render

--- a/.env.production
+++ b/.env.production
@@ -1,8 +1,8 @@
 # Production Environment Configuration
 NODE_ENV=production
 
-# API Configuration
-VITE_API_URL=http://localhost:4000/api
+# API Configuration - Updated for Render
+VITE_API_URL=https://editorial-app-backend.onrender.com/api
 VITE_API_TIMEOUT=10000
 
 # Database Configuration (for backend)
