--- a/render.yaml
+++ b/render.yaml
@@ -4,7 +4,7 @@ services:
     name: editorial-app-backend
     env: node
     region: oregon
-    plan: starter
+    plan: free
     buildCommand: cd backend && npm install
     startCommand: cd backend && npm start
     healthCheckPath: /health
@@ -24,10 +24,8 @@ services:
     autoDeploy: true
 
   # Frontend Static Site
-  - type: web
+  - type: static
     name: editorial-app-frontend
-    env: static
-    plan: starter
     buildCommand: npm install && npm run build
     staticPublishPath: ./dist
     headers:
@@ -50,5 +48,5 @@ databases:
     databaseName: editorialdata
     user: editorialuser
     region: oregon
-    plan: starter
+    plan: free
     postgresMajorVersion: 15
