--- a/package.json
+++ b/package.json
@@ -39,7 +39,9 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^7.7.0"
+    "react-router-dom": "^7.7.0",
+    "vite": "^7.0.4",
+    "@vitejs/plugin-react": "^4.6.0"
   },
   "devDependencies": {
     "@babel/core": "^7.28.0",
@@ -51,7 +53,6 @@
     "@testing-library/user-event": "^14.6.1",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
-    "@vitejs/plugin-react": "^4.6.0",
     "babel-jest": "^30.0.5",
     "cypress": "^14.5.3",
     "eslint": "^9.30.1",
@@ -63,7 +64,6 @@
     "jest-environment-jsdom": "^30.0.5",
     "jsonwebtoken": "^9.0.2",
     "supertest": "^7.1.4",
-    "terser": "^5.43.1",
-    "vite": "^7.0.4"
+    "terser": "^5.43.1"
   }
 }
