--- a/render.yaml
+++ b/render.yaml
@@ -29,6 +29,11 @@ services:
     env: static
     buildCommand: npm install && npm run build
     staticPublishPath: ./dist
+    # Configuración para SPA routing
+    routes:
+      - type: rewrite
+        source: "/*"
+        destination: "/index.html"
     headers:
       - path: "/*"
         name: "X-Frame-Options"
