🔧 Fix: Force frontend redeploy with specific redirects for each route

--- a/render.yaml
+++ b/render.yaml
@@ -28,6 +28,7 @@ services:
     name: editorial-app-frontend
     buildCommand: npm install && npm run build
     staticPublishPath: ./dist
+    autoDeploy: true
     # Headers
     headers:
       - path: "/*"
