--- a/_archive/examples/.env.example
+++ b/_archive/examples/.env.example
@@ -1,7 +1,16 @@
-# Example Environment Configuration
-# Copy this file to .env and modify the values according to your setup
+# Frontend Environment Variables
+# Copy this file to .env.local and modify the values
 
-# Database Configuration
+# API Configuration
+VITE_API_URL=http://localhost:4000
+VITE_APP_NAME=Editorial App
+VITE_APP_VERSION=1.0.0
+
+# Environment
+NODE_ENV=development
+
+# For development mode, backend variables can be included here
+# Database Configuration (used by backend)
 DB_HOST=192.168.18.5
 DB_PORT=5432
 DB_NAME=editorialdata
@@ -9,23 +18,6 @@ DB_USER=markitos
 DB_PASSWORD=AjedreZ22
 DATABASE_URL=postgresql://markitos:AjedreZ22@192.168.18.5:5432/editorialdata
 
-# Application Configuration
-NODE_ENV=development
+# Backend Configuration
 PORT=4000
-
-# JWT Configuration
-JWT_SECRET=your-secure-jwt-secret-here
-JWT_EXPIRES_IN=24h
-
-# File Upload Configuration
-UPLOAD_MAX_SIZE=10485760
-UPLOAD_PATH=./uploads
-
-# CORS Configuration
-CORS_ORIGIN=http://localhost:5173
-
-# Logging
-LOG_LEVEL=debug
-
-# Other configurations
-BCRYPT_ROUNDS=10
+JWT_SECRET=development-jwt-secret-change-in-production
