reorganizacion completa del proyecto

--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,13 @@ dist-ssr
 /jest.config.js 
 /eslint.config.js 
 /ecosystem.config.* 
+# Documentación archivada 
+**/BUILD_FIX_*.md 
+**/DOCUMENTACION_*.md 
+**/ESTADO_ACTUAL*.md 
+**/DEPLOYMENT*.md 
+**/GUIA_*.md 
+# Configs archivadas 
+/jest.config.js 
+/eslint.config.js 
+/ecosystem.config.* 
