--- a/package.json
+++ b/package.json
@@ -14,19 +14,16 @@
     "preview": "vite preview --mode preview",
     "preview:staging": "vite preview --mode staging",
     "preview:production": "vite preview --mode production",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage",
-    "test:unit": "jest tests/unit",
-    "test:integration": "jest tests/integration",
-    "test:e2e": "cypress run",
-    "test:e2e:open": "cypress open",
-    "test:all": "npm run test:unit && npm run test:integration && npm run test:e2e",
+    "test": "vitest",
+    "test:run": "vitest run",
+    "test:watch": "vitest --watch",
+    "test:coverage": "vitest --coverage",
+    "test:ui": "vitest --ui",
     "clean": "rm -rf dist node_modules/.vite",
     "validate-build": "node scripts/validate-build.js",
     "start": "npm run preview",
     "deploy:staging": "npm run build:staging && npm run preview:staging",
-    "deploy:production": "npm run test:all && npm run build:production",
+    "deploy:production": "npm run test:run && npm run build:production",
     "health-check": "node scripts/health-check.js"
   },
   "dependencies": {
@@ -34,14 +31,14 @@
     "@chakra-ui/react": "^2.10.9",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
+    "@vitejs/plugin-react": "^4.6.0",
     "axios": "^1.11.0",
     "framer-motion": "^6.5.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.7.0",
-    "vite": "^7.0.4",
-    "@vitejs/plugin-react": "^4.6.0"
+    "vite": "^7.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.28.0",
@@ -62,8 +59,10 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^30.0.5",
     "jest-environment-jsdom": "^30.0.5",
+    "jsdom": "^26.1.0",
     "jsonwebtoken": "^9.0.2",
     "supertest": "^7.1.4",
-    "terser": "^5.43.1"
+    "terser": "^5.43.1",
+    "vitest": "^3.2.4"
   }
 }
